[gd_scene load_steps=6 format=3 uid="uid://du28ged46ahng"]

[ext_resource type="Script" uid="uid://1is2mmjko6ua" path="res://Scripts/itemBinaryAdd.gd" id="1_pct0j"]
[ext_resource type="Script" uid="uid://c8d8nlbkig6fx" path="res://Scripts/itemMover.gd" id="2_vav1d"]
[ext_resource type="Script" uid="uid://charp5oxyaipl" path="res://Scripts/itemReceiver.gd" id="3_0hol4"]
[ext_resource type="SpriteFrames" uid="uid://bdu3eyu0mwmgj" path="res://Resources/sprites/binary_machine.tres" id="4_vav1d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_usf1e"]
size = Vector2(8, 8)

[node name="AddFixedMachine" type="Node2D"]
script = ExtResource("1_pct0j")

[node name="ItemMover" type="Area2D" parent="."]
script = ExtResource("2_vav1d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemMover"]
shape = SubResource("RectangleShape2D_usf1e")

[node name="ItemReceiver1" type="Area2D" parent="."]
position = Vector2(64, 0)
script = ExtResource("3_0hol4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemReceiver1"]
shape = SubResource("RectangleShape2D_usf1e")

[node name="ItemReceiver2" type="Area2D" parent="."]
position = Vector2(-64, 0)
script = ExtResource("3_0hol4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemReceiver2"]
shape = SubResource("RectangleShape2D_usf1e")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("4_vav1d")
